# invprob

./: .gitignore  LICENSE  README.rst  pyproject.toml
invprob/shepplogan/: shepplogan.py
invprob/tests/shepplogan/: test_shepplogan.py
